--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "class-variance-authority": "^0.7.0",
@@ -18,6 +22,7 @@
     "next": "^14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.0.0",
     "rehype-katex": "^7.0.1",
